tests/frontend/fail/array/array_mapping_assignment.act
contract B

constructor
interface constructor()

creates

  uint[2] a := [1 := 3, 2 := 10]
